# rcomic

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  image.cpp  image.h  imageList.cpp  imageList.h  imageUtils.cpp  imageUtils.h  main.cpp  window.cpp  window.h
cmake/: FindSDL2.cmake
